# 2021YUELU_version

./: README.md
hnuyue-lu-rm2022-vision/: CMakeLists.txt  CameraParam.xml  main.cpp  watchdog.sh
hnuyue-lu-rm2022-vision/AngleSolver/: AngleSolver.h  AngleSovler.cpp  balance.xml  out_camera_data.xml
hnuyue-lu-rm2022-vision/ArmorDetectorCNN2T/: ArmorDetectorCNN2T.cpp  ArmorDetectorCNN2T.h
hnuyue-lu-rm2022-vision/ArmorDetectorT/: ArmorDetectorT.cpp  ArmorDetectorT.h  Defaker.hpp  Detector.hpp
hnuyue-lu-rm2022-vision/Data/: DataType.hpp  Databuffer.hpp
hnuyue-lu-rm2022-vision/IndustrialCamera/: Camera.cpp  Camera.h
hnuyue-lu-rm2022-vision/Nanodet/: nanodet.mapping  nanodet.xml  nanodet_openvino.h
hnuyue-lu-rm2022-vision/Serial/: Serialcodec.cpp  Serialcodec.h  serial.cpp  serial.h
hnuyue-lu-rm2022-vision/Serial/Protocol/: protocol.cpp  protocol.h
hnuyue-lu-rm2022-vision/Serial/Protocol/CRC/: bsp_crc16.cpp  bsp_crc16.h  bsp_crc8.cpp  bsp_crc8.h
hnuyue-lu-rm2022-vision/ThreadManager/: ThreadManager.cpp  ThreadManager.h
